# automation-portfolio

./: README.md
Google Maps Apify and Web Scrapper System/: main.py  pyproject.toml  scraper.py
Retell AI/Real Estate RAG Agent/: Rodezi_RealEstate.json
Retell AI/Retell AI - Real Estate Agent/: Real Estate Agente.json
