[project]
name = "google-maps-scrapper"
version = "0.1.0"
description = "Scraper de Google Maps para Inmobiliarias y Real Estate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.43.0",
]

[project.scripts]
gmaps-scraper = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
